--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <script>
 
     /* Call function. */
-    chartIT()
+    chartIt()
 
     /* Create function to chart data. */
-    async function chartIT() {
+    async function chartIt() {
       /* Call getData(). */
       const data = await getData()
       console.log(data)
