grinding the gring

--- a/crime.html
+++ b/crime.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 
-  <!-- Create canvas-elements. -->
-  <canvas id="chart1" width="800" height="400"></canvas>
-  <canvas id="chart2" width="800" height="400"></canvas>
+  <!-- Creat div element for canvases. -->
+  <div class="container" style="height: 300px; width: 600px;">
+    <!-- Create canvas-elements. -->
+    <canvas id="chart1"></canvas>
+    <canvas id="chart2"></canvas>
+  </div>
 
   <script>
 
