--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       const ys = []
 
       /* Fetch data. */
-      const response = await fetch("ZonAnn.Ts+dSST.csv")
+      const response = await fetch("ZonAnn.csv")
       const data = await response.text()
 
       /* Parse txt-file to csv-file. Split file by row.*/
