grinding the grind

--- a/crime.html
+++ b/crime.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Creat div element for canvases. -->
-  <div class="container" style="height: 300px; width: 600px;">
+  <div class="container" style="max-width: 600px">
     <!-- Create canvas-elements. -->
     <canvas id="chart1"></canvas>
     <canvas id="chart2"></canvas>
