--- a/crime.html
+++ b/crime.html
@@ -9,31 +9,75 @@
 </head>
 <body>
 
-  <!-- Creat div element for canvases. -->
-  <div class="container" style="max-width: 600px">
-    <!-- Create canvas-elements. -->
+  <!-- Creat div element for canvas. -->
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
+    <!-- Create canvas-element. -->
     <canvas id="chart0"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart1"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart2"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart3"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart4"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart5"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart6"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart7"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart8"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart9"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart10"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart11"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart12"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart13"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart14"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart15"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart16"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart17"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart18"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart19"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart20"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart21"></canvas>
+  </div>
+  <div class="container" style="max-width: 600px; padding-bottom: 100px;">
     <canvas id="chart22"></canvas>
   </div>
 
@@ -992,8 +1036,6 @@
         const year = parseInt(columns[3].slice(1, 5))
         const victimMale = parseInt(columns[5])
         const victimFemale = parseInt(columns[6])
-
-        console.log(crime)
 
         /* Sort data into objects. */
         if (crime === "YHTEENSÄ") {
