--- a/index.html
+++ b/index.html
@@ -1,87 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>JS tabular data</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-</head>
-<body>
-  <!-- Data from "https://data.giss.nasa.gov/gistemp/". -->
-
-  <canvas id="chart" width="800" height="400"></canvas>
-
-
-  <script>
-
-    /* Call function. */
-    chartIt()
-
-    /* Create function to chart data. */
-    async function chartIt() {
-      /* Call getData(). */
-      const data = await getData()
-      console.log(data)
-
-      /* Select canvas-alement by id. */
-      const ctx = document.getElementById("chart").getContext("2d")
-
-      /* Chart data. */
-      const myChart = new Chart(ctx, {
-          type: "line",
-          data: {
-              labels: data.xs,
-              datasets: [{
-                  label: "Global average temperature in °C",
-                  data: data.ys,
-                  backgroundColor: "rgba(255, 99, 132, 0.2)",
-                  borderColor: "rgba(255, 99, 132, 1)",
-                  borderWidth: 2,
-                  fill: false,
-              }]
-          },
-          options: {
-            scales: {
-              y: {
-                  ticks: {
-                      callback: function(value, index, ticks) {
-                          return value + "°";
-                      }
-                  }
-              }
-            }
-          }
-      })
-    }
-
-    /* Async function to get data. */
-    async function getData() {
-      /* Create arrays for x- and y-coordinates. */
-      const xs = []
-      const ys = []
-
-      /* Fetch data. */
-      const response = await fetch("ZonAnn.csv")
-      const data = await response.text()
-
-      /* Parse txt-file to csv-file. Split file by row.*/
-      let table = data.split("\n")
-      /* Remove first-line (header). */
-      table = table.slice(1)
-      /* Use forEach to iterate rows insted of for-loop. */
-      table.forEach(row => {
-        const columns = row.split(",")
-        const year = columns[0]
-        xs.push(year)
-        const temp = parseFloat(columns[1])
-        ys.push(temp + 14) // Add 14 degrees, which is the global mean. Original data is difference from mean.
-        console.log(year, temp)
-      })
-      /* Return object with values. */
-      return { xs, ys }
-    }
-    
-  </script>
-
-</body>
+    <link rel="stylesheet" href="styles.css">
+    <title>Sukupuolittunut väkivalta Suomessa</title>
+  </head>
+  <body>
+    <header>
+      <div id="title" class="page">
+        <h1>Miehet ja naiset rikoksen uhreina: Tältä näyttää sukupuolittunut väkivalta Suomessa</h1>
+        <h2>Tähän tulee loistava ingressi, joka houkuttelee lukemaan. Ingressin pituus on pari lausetta.</h2>
+        <img src="IMG_3711.jpeg">
+        <div class="next"><a href="#pic1">Seuraava</a></div>
+      </div>
+    </header>
+    <main>
+      <div id="pic1" class="page">
+        <h3>Suomessa on tutkittu laajasti rikosten tekijöitä, mutta ei uhreja.</h3>
+        <p>Tilastokeskuksen rekistereistä löytyy XX tietokantaa jotka koskevat rikoksen tekijöitä, mutta vain yksi joka koskee uhreja ja sekään ei ole täydellinen. Rikosten uhrien tutkiminen ei syystä tai toisesta ole kinnostanut rikollisuuden tutkijoita. Tässä jutussa tarkastellaan mitä rikosten uhreista voi päätellä sukupuolen kannalta.</p>
+        <div class="next"><a href="#pic2">Seuraava</a></div>
+      </div>
+      <div id="pic2" class="page">
+        <p>Kuva 2</p>
+        <div class="next"><a href="#pic3">Seuraava</a></div>
+      </div>
+      <div id="pic3" class="page">
+        <p>Kuva 3</p>
+        <div class="next"><a href="#pic4">Seuraava</a></div>
+      </div>
+      <div id="pic4" class="page">
+        <p>Kuva 4</p>
+        <div class="next"><a href="#pic5">Seuraava</a></div>
+      </div>
+      <div id="pic5" class="page">
+        <p>Kuva 5</p>
+        <div class="next"><a href="#pic6">Seuraava</a></div>
+      </div>
+      <div id="pic6" class="page">
+        <p>Kuva 6</p>
+        <div class="next"><a href="#pic7">Seuraava</a></div>
+      </div>
+      <div id="pic7" class="page">
+        <p>Kuva 7</p>
+        <div class="next"><a href="#pic8">Seuraava</a></div>
+      </div>
+      <div id="pic8" class="page">
+        <p>Kuva 8</p>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
