up and down arrows

--- a/index.html
+++ b/index.html
@@ -6,46 +6,71 @@
     <link rel="stylesheet" href="styles.css">
     <title>Sukupuolittunut väkivalta Suomessa</title>
   </head>
-  <body>
+  <body class="scrollable">
+
     <header>
       <div id="title" class="page">
         <h1>Miehet ja naiset rikoksen uhreina: Tältä näyttää sukupuolittunut väkivalta Suomessa</h1>
         <h2>Tähän tulee loistava ingressi, joka houkuttelee lukemaan. Ingressin pituus on pari lausetta.</h2>
         <img src="IMG_3711.jpeg">
-        <div class="next"><a href="#pic1">Seuraava</a></div>
-      </div>
+        <a href="#pic1"><div class="next"></div></a>
     </header>
+
     <main>
       <div id="pic1" class="page">
+
+        <a href="#title"><div class="previous"></div></a>
+        
         <h3>Suomessa on tutkittu laajasti rikosten tekijöitä, mutta ei uhreja.</h3>
         <p>Tilastokeskuksen rekistereistä löytyy XX tietokantaa jotka koskevat rikoksen tekijöitä, mutta vain yksi joka koskee uhreja ja sekään ei ole täydellinen. Rikosten uhrien tutkiminen ei syystä tai toisesta ole kinnostanut rikollisuuden tutkijoita. Tässä jutussa tarkastellaan mitä rikosten uhreista voi päätellä sukupuolen kannalta.</p>
-        <div class="next"><a href="#pic2">Seuraava</a></div>
+        <a href="#pic2"><div class="next"></div></a>
+
       </div>
       <div id="pic2" class="page">
+        <a href="#pic1"><div class="previous"></div></a>
+
         <p>Kuva 2</p>
-        <div class="next"><a href="#pic3">Seuraava</a></div>
+        <a href="#pic3"><div class="next"></div></a>
+
       </div>
       <div id="pic3" class="page">
+        <a href="#pic2"><div class="previous"></div></a>
+
         <p>Kuva 3</p>
-        <div class="next"><a href="#pic4">Seuraava</a></div>
+        <a href="#pic4"><div class="next"></div></a>
+
       </div>
       <div id="pic4" class="page">
+        <a href="#pic3"><div class="previous"></div></a>
+
         <p>Kuva 4</p>
-        <div class="next"><a href="#pic5">Seuraava</a></div>
+        <a href="#pic5"><div class="next"></div></a>
+
       </div>
       <div id="pic5" class="page">
+        <a href="#pic4"><div class="previous"></div></a>
+
         <p>Kuva 5</p>
-        <div class="next"><a href="#pic6">Seuraava</a></div>
+        <a href="#pic6"><div class="next"></div></a>
+
       </div>
       <div id="pic6" class="page">
+        <a href="#pic5"><div class="previous"></div></a>
+
         <p>Kuva 6</p>
-        <div class="next"><a href="#pic7">Seuraava</a></div>
+        <a href="#pic7"><div class="next"></div></a>
+
       </div>
       <div id="pic7" class="page">
+        <a href="#pic6"><div class="previous"></div></a>
+
         <p>Kuva 7</p>
-        <div class="next"><a href="#pic8">Seuraava</a></div>
+        <a href="#pic8"><div class="next"></div></a>
+
       </div>
       <div id="pic8" class="page">
+        <a href="#pic7"><div class="previous"></div></a>
+
         <p>Kuva 8</p>
       </div>
     </main>
