--- a/index.html
+++ b/index.html
@@ -1,79 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Sukupuolittunut väkivalta Suomessa</title>
+    <!-- <script src="script.js" defer></script> -->
+    <title>Sukupuolittunut rikollisuus uhrin näkökulmasta</title>
   </head>
-  <body class="scrollable">
+  <body>
 
-    <header>
-      <div id="title" class="page">
-        <h1>Miehet ja naiset rikoksen uhreina: Tältä näyttää sukupuolittunut väkivalta Suomessa</h1>
-        <h2>Tähän tulee loistava ingressi, joka houkuttelee lukemaan. Ingressin pituus on pari lausetta.</h2>
-        <img src="IMG_3711.jpeg">
-        <a href="#pic1"><div class="next"></div></a>
-    </header>
 
-    <main>
-      <div id="pic1" class="page">
 
-        <a href="#title"><div class="previous"></div></a>
-        
-        <h3>Suomessa on tutkittu laajasti rikosten tekijöitä, mutta ei uhreja.</h3>
-        <p>Tilastokeskuksen rekistereistä löytyy XX tietokantaa jotka koskevat rikoksen tekijöitä, mutta vain yksi joka koskee uhreja ja sekään ei ole täydellinen. Rikosten uhrien tutkiminen ei syystä tai toisesta ole kinnostanut rikollisuuden tutkijoita. Tässä jutussa tarkastellaan mitä rikosten uhreista voi päätellä sukupuolen kannalta.</p>
-        <a href="#pic2"><div class="next"></div></a>
 
-      </div>
-      <div id="pic2" class="page">
-        <a href="#pic1"><div class="previous"></div></a>
 
-        <p>Kuva 2</p>
-        <a href="#pic3"><div class="next"></div></a>
+  
 
-      </div>
-      <div id="pic3" class="page">
-        <a href="#pic2"><div class="previous"></div></a>
 
-        <p>Kuva 3</p>
-        <a href="#pic4"><div class="next"></div></a>
 
-      </div>
-      <div id="pic4" class="page">
-        <a href="#pic3"><div class="previous"></div></a>
-
-        <p>Kuva 4</p>
-        <a href="#pic5"><div class="next"></div></a>
-
-      </div>
-      <div id="pic5" class="page">
-        <a href="#pic4"><div class="previous"></div></a>
-
-        <p>Kuva 5</p>
-        <a href="#pic6"><div class="next"></div></a>
-
-      </div>
-      <div id="pic6" class="page">
-        <a href="#pic5"><div class="previous"></div></a>
-
-        <p>Kuva 6</p>
-        <a href="#pic7"><div class="next"></div></a>
-
-      </div>
-      <div id="pic7" class="page">
-        <a href="#pic6"><div class="previous"></div></a>
-
-        <p>Kuva 7</p>
-        <a href="#pic8"><div class="next"></div></a>
-
-      </div>
-      <div id="pic8" class="page">
-        <a href="#pic7"><div class="previous"></div></a>
-
-        <p>Kuva 8</p>
-      </div>
-    </main>
-    <footer></footer>
   </body>
 </html>
